[package]
name = "tokio_cassandra"
version = "0.1.0"
authors = ["Tom Burdick <thomas.burdick@gmail.com>"]

[dependencies]
futures = { git = "https://github.com/alexcrichton/futures-rs" }
log = "0.3.6"
tokio-proto = { git = "https://github.com/tokio-rs/tokio-proto" }
tokio-core = { git = "https://github.com/tokio-rs/tokio-core" }

[dev-dependencies]
env_logger = "0.3.0"

